<resources>
    <!--App metadata-->
    <string name="app_name">LesBonnesAffairesDeBibi.fr</string>
    <!--Utils-->
    <string name="all">Tous</string>

    <!--Call to actions-->
    <string name="login">Se connecter</string>
    <string name="find_image_action">Séléctionner une image</string>
    <string name="add_fav_btn">Ajouter aux favoris</string>
    <string name="filter_label">Filtrer </string>
    <string name="action_add">Ajouter une annonce </string>
    <string name="action_edit">Modifier une annonce </string>
    <string name="action_contact">Contacter le vendeur  </string>
    <string name="edit_annoucement">Modifier vos annonces</string>
    <string name="action_send">Envoyer</string>
    <string name="back_to_announcement">Retour à l\'annonce</string>
    <string name="back_to_search">Retour à la recherche</string>
    <string name="reset">RESET</string>

    <!--Error messages-->
    <string name="empty">Aucune annonces trouvée</string>
    <string name="sorry">Ooops.. Désolé</string>
    <string name="empty_error">Ce champ est obligatoire</string>
    <string name="error_generic">Une erreur est survenue</string>
    <string name="error_generic_form">Le formulaire contient une erreur</string>
    <string name="image_missing">Veuillez ajouter une image</string>
    <string name="invalid_credentials">Vos identifiants ne sont pas reconnus</string>
    <string name="message_not_send">Votre message n\'a pas été envoyé</string>
    <string name="mail_invalid_error">Merci de renseigner un email valide</string>
    <string name="password_unmatch_error">Les mots de passes ne correspondent pas</string>

    <!--Sucess messages-->
    <string name="edit_success">Votre annonce à été modifiée</string>
    <string name="create_success">Votre annonce à été modifiée</string>
    <string name="delete_success">Votre annonce à été supprimée</string>
    <string name="generic_sucess">Opération réussie</string>
    <string name="message_sent_sucess">
        Votre message à bien été envoyé au serveur.\n
        Le vendeur reviendra vers vous rapidement.\n\n

        Merci pour votre confiance,\n
        Bonne journéee,\n\n

        Les bonnes affaires de bibi\n
    </string>

    <!--Form labels-->
    <string name="search_label">Que cherchez vous ?</string>
    <string name="date_label">Date</string>
    <string name="categorie_label">Catégorie</string>
    <string name="desc_label">Description</string>
    <string name="location_label">Ville / CP </string>
    <string name="name_label">Nom du vendeur</string>
    <string name="customer_name_label">Votre nom</string>
    <string name="mail_label">E-mail</string>
    <string name="titre_label">Titre</string>
    <string name="password_label">Mot de passe</string>
    <string name="password_confirm_label">Confirmation du mot de passe</string>
    <string name="price_label">Prix</string>
    <string name="price_placeholder">%1$d €</string>
    <string name="cate_placeholder">Catégorie : %1$s</string>
    <string name="phone_label">Numéro de téléphone</string>
    <string name="message_label">Message</string>
    <string name="vendor_placeholder">Vendu par %1$s</string>

    <!--Navigation-->
    <string name="action_home">Acceuil </string>
    <string name="action_fav">Favoris </string>
    <string name="action_menu">Menu</string>

    <!--Lists-->
    <string-array name="type_select">
        <item>@string/cate_all</item>
        <item>@string/cars</item>
        <item>@string/clothes</item>
    </string-array>

    <string name="cate_all">Selectionner une catégorie</string>
    <string name="cars">Voitures</string>
    <string name="clothes">Vêtements</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
