<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.EditionActivity">

    <ImageView
        android:id="@+id/imagePreview"
        android:layout_width="match_parent"
        android:layout_height="129dp"
        app:srcCompat="@mipmap/ic_launcher" />

    <Button
        android:id="@+id/findImageBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/find_image_action" />

    <EditText
        android:id="@+id/vendorNameIpt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/name_label"
        android:ems="10"
        android:hint="@string/name_label"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/mailIpt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/mail_label"
        android:ems="10"
        android:hint="@string/mail_label"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/passwordIpt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/password_label"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/passwordConfirmIpt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/password_confirm_label"
        android:inputType="textPassword" />

    <Spinner
        android:id="@+id/categorieSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/type_select" />

    <EditText
        android:id="@+id/descIpt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/desc_label"
        android:inputType="textPersonName"
        android:minLines="4"
        android:singleLine="false" />

    <EditText
        android:id="@+id/priceIpt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/price_label"
        android:inputType="numberDecimal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cancelBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@android:string/cancel" />

        <Button
            android:id="@+id/confirmBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@android:string/ok" />

    </LinearLayout>

</LinearLayout>