<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.AnnouncementListFragment">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:gravity="start"
        android:orientation="vertical">

        <ToggleButton
            android:id="@+id/filterToogle"
            style="@style/FilterToggleButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="ToggleButton" />

        <com.github.chuross.library.ExpandableLayout
            android:id="@+id/expandable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <!-- any child views -->

            <LinearLayout
                android:id="@+id/linear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                tools:layout_editor_absoluteY="42dp">

                <EditText
                    android:id="@+id/search"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:ems="10"
                    android:hint="@string/search_label"
                    android:inputType="textPersonName" />

                <EditText
                    android:id="@+id/locationIpt"
                    android:layout_width="match_parent"
                    android:layout_height="49dp"
                    android:ems="10"
                    android:hint="@string/location_label"
                    android:inputType="text" />

                <Spinner
                    android:id="@+id/type"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_marginTop="16dp"
                    android:entries="@array/type_select" />

                <Button
                    android:id="@+id/filterBtn"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/filter_label" />
            </LinearLayout>

        </com.github.chuross.library.ExpandableLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </android.support.v7.widget.RecyclerView>

        <TextView
            android:id="@+id/empty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/empty"
            android:visibility="gone" />

    </LinearLayout>


</FrameLayout>