<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.LoginFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView5"
            style="@style/h1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/card_padding"
            android:text="@string/edit_annoucement" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="299dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="-76dp"
            android:text="@string/mail_label" />

        <EditText
            android:id="@+id/usernameIpt"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="76dp"
            android:ems="10"
            android:hint="@string/mail_label"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="301dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="-171dp"
            android:text="@string/password_label" />

        <EditText
            android:id="@+id/passwordIpt"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="171dp"
            android:ems="10"
            android:inputType="textPassword" />

        <android.support.constraint.ConstraintLayout
            android:layout_width="324dp"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/resetBtn"
                android:layout_width="157dp"
                android:layout_height="wrap_content"
                android:text="@android:string/cancel"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/loginBtn"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/loginBtn"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="138dp"
                android:layout_height="wrap_content"
                android:text="@string/login"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/resetBtn"
                app:layout_constraintTop_toTopOf="parent" />
        </android.support.constraint.ConstraintLayout>
    </LinearLayout>
</FrameLayout>